deployment/base/030-dc.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: publish
  name: publisher
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: publish
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  template:
    metadata:
      annotations:
        prometheus.io/path: actuator/prometheus
        prometheus.io/scrape: 'true'
        prometheus.io/port: '8181'
      labels:
        app: publish
    spec:
      serviceAccountName: publisher-account
      containers:
      - name: publish
        image: localhost:5000/bomc/publish:OVERRIDE_BY_OVERLAYS
        imagePullPolicy: IfNotPresent
        resources:
          requests:
            cpu: 250m
            memory: 360Mi
          limits:
            cpu: 350m
            memory: 360Mi
        ports:
        - containerPort: OVERRIDE_BY_OVERLAYS
          protocol: TCP
        readinessProbe:
          httpGet:
            path: /actuator/health/readiness
            port: OVERRIDE_BY_OVERLAYS
          initialDelaySeconds: 25
          periodSeconds: 30
          failureThreshold: 3
        livenessProbe:
          httpGet:
            path: /actuator/health/liveness
            port: OVERRIDE_BY_OVERLAYS
          initialDelaySeconds: 30
          periodSeconds: 30
          failureThreshold: 3
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
